--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,72 +1,167 @@
-name: Publish
+name: Build and Release
 
 on:
-  workflow_dispatch:
+    workflow_dispatch:
 
 env:
-  VERSION: "v0.1.0"
-
-permissions:
-  contents: write
+    VERSION: 2.2.1
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+    # Release build job
+    release:
+        permissions: write-all
+        strategy:
+            fail-fast: false
+            matrix:
+                platform:
+                    [macos-latest, macos-13, ubuntu-latest, windows-latest]
+        runs-on: ${{ matrix.platform }}
+        steps:
+            - name: Checkout repository
+              uses: actions/checkout@v4
 
-    steps:
-      - name: Checkout the code
-        uses: actions/checkout@v4
+            - name: Install dependencies (ubuntu only)
+              if: matrix.platform == 'ubuntu-latest'
+              run: |
+                  sudo apt-get update
+                  sudo apt-get install -y build-essential curl libssl-dev libgtk-3-dev
 
-      - name: Set up Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: stable
+            - name: Rust setup
+              uses: dtolnay/rust-toolchain@stable
 
-      - name: Install dependencies
-        run: go mod download
+            - name: Rust cache
+              uses: swatinem/rust-cache@v2
 
-      - name: Build the binary for the current OS
-        run: |
-          if [[ "${{ matrix.os }}" == "windows-latest" ]]; then
-            GOOS=windows GOARCH=amd64 go build -ldflags "-w -s" -o "tooka-${{ matrix.os }}-${{ env.VERSION }}.exe"
-          elif [[ "${{ matrix.os }}" == "macos-latest" ]]; then
-            GOOS=darwin GOARCH=amd64 go build -ldflags "-w -s" -o "tooka-${{ matrix.os }}-${{ env.VERSION }}"
-          else
-            GOOS=linux GOARCH=amd64 go build -ldflags "-w -s" -o "tooka-${{ matrix.os }}-${{ env.VERSION }}"
-          fi
+            - name: Install app dependencies
+              run: cargo install cargo-packager --locked
 
+            - name: Package Binary
+              run: cargo packager --release --verbose
 
-      - name: Upload the binaries
-        uses: actions/upload-artifact@v4
-        with:
-          name: tooka-${{ matrix.os }}-${{ env.VERSION }}
-          path: |
-            ${{ matrix.os == 'windows-latest' && format('tooka-{0}-{1}.exe', matrix.os, env.VERSION) || format('tooka-{0}-{1}', matrix.os, env.VERSION) }}
+            - name: Upload build artifacts
+              uses: actions/upload-artifact@v4
+              with:
+                  name: ${{ matrix.platform }}-release-artifacts
+                  path: |
+                      ${{ matrix.platform == 'macos-latest' && 'target/release/tooka.app' || '' }}
+                      ${{ matrix.platform == 'macos-latest' && 'target/release/tooka_*_aarch64.dmg' || '' }}
+                      ${{ matrix.platform == 'macos-13' && 'target/release/tooka.app' || '' }}
+                      ${{ matrix.platform == 'macos-13' && 'target/release/tooka_*_x64.dmg' || '' }}
+                      ${{ matrix.platform == 'ubuntu-latest' && 'target/release/PKGBUILD' || '' }}
+                      ${{ matrix.platform == 'ubuntu-latest' && 'target/release/tooka_*_amd64.deb' || '' }}
+                      ${{ matrix.platform == 'ubuntu-latest' && 'target/release/tooka_*_x86_64.AppImage' || '' }}
+                      ${{ matrix.platform == 'windows-latest' && 'target/release/tooka_*_x64_en-US.msi' || '' }}
+                      ${{ matrix.platform == 'windows-latest' && 'target/release/tooka_*_x64-setup.exe' || '' }}
 
-  upload_to_release:
-    name: Upload to GitHub release
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Download release artifacts
-        uses: actions/download-artifact@v4
-        with:
-          path: artifacts
-          merge-multiple: true
+    # Cross-compilation job
+    cross_compile:
+        permissions: write-all
+        strategy:
+            fail-fast: false
+            matrix:
+                include:
+                    - arch: aarch64
+                      target: aarch64-unknown-linux-gnu
+                      apt: gcc-aarch64-linux-gnu
+                      sysroot: /usr/aarch64-linux-gnu/
+                      pkg_arch: arm64
+                    - arch: riscv64
+                      target: riscv64gc-unknown-linux-gnu
+                      apt: gcc-riscv64-linux-gnu
+                      sysroot: /usr/riscv64-linux-gnu/
+                      pkg_arch: riscv64
 
-#      - name: Create attestation for all builds
-#        uses: actions/attest-build-provenance@v2
-#        with:
-#          subject-path: artifacts/tooka-*
+        runs-on: ubuntu-latest
+        steps:
+            - name: Checkout code
+              uses: actions/checkout@v4
 
-      - name: Create a GitHub Release (Draft)
-        uses: softprops/action-gh-release@v2
-        with:
-          draft: true
-          generate_release_notes: true
-          name: Tooka ${{ env.VERSION }}
-          tag_name: ${{ env.VERSION }}
-          files: artifacts/tooka-*
+            - name: Clean install Debian packages
+              run: sudo apt-get clean && sudo apt-get update && sudo apt-get upgrade -y
+
+            - name: Install cross-compile dependencies
+              uses: ryankurte/action-apt@v0.5.0
+              with:
+                  arch: ${{ matrix.pkg_arch }}
+                  packages: "libssl-dev:${{ matrix.pkg_arch }}"
+
+            - name: Install system dependencies
+              run: |
+                  sudo apt-get update
+                  sudo apt-get install -y \
+                    pkg-config \
+                    build-essential \
+                    curl \
+                    libssl-dev \
+                    libgtk-3-dev \
+                    ${{ matrix.apt }}
+
+            - name: Rust setup
+              uses: dtolnay/rust-toolchain@stable
+
+            - name: Rust cache
+              uses: swatinem/rust-cache@v2
+
+            - name: Install Rust target
+              run: rustup target add ${{ matrix.target }}
+
+            - name: Set environment variables
+              run: echo "PKG_CONFIG_SYSROOT_DIR=${{ matrix.sysroot }}" >> $GITHUB_ENV
+
+            - name: Install deb packager
+              run: cargo install cargo-deb
+
+            - name: Package the cross-compiled build
+              env:
+                  PKG_CONFIG_SYSROOT_DIR: ${{ matrix.sysroot }}
+              run: |
+                  cargo deb --target=${{ matrix.target }} -- --no-default-features
+
+            - name: Upload cross-compile artifacts
+              uses: actions/upload-artifact@v4
+              with:
+                  name: ${{ matrix.pkg_arch }}-cross-compile-artifacts
+                  path: target/${{ matrix.target }}/debian/*.deb
+
+    # Upload to GitHub release job
+    upload_to_release:
+        permissions: write-all
+        runs-on: ubuntu-latest
+        needs: [release, cross_compile]
+        steps:
+            - name: Download release artifacts
+              uses: actions/download-artifact@v4
+              with:
+                  path: artifacts
+                  merge-multiple: true
+
+            - name: Create attestation for all builds
+              uses: actions/attest-build-provenance@v2
+              with:
+                  subject-path: |
+                      artifacts/PKGBUILD
+                      artifacts/tooka_*_aarch64.dmg
+                      artifacts/tooka_*_x64.dmg
+                      artifacts/tooka_*_amd64.deb
+                      artifacts/tooka_*_x86_64.AppImage
+                      artifacts/tooka_*_x64_en-US.msi
+                      artifacts/tooka_*_x64-setup.exe
+                      artifacts/tooka_*_arm64.deb
+                      artifacts/tooka_*_riscv64.deb
+
+            - name: Release to GitHub
+              uses: softprops/action-gh-release@v2
+              with:
+                  draft: true
+                  generate_release_notes: true
+                  tag_name: Tooka v${{ env.VERSION }}
+                  files: |
+                      artifacts/PKGBUILD
+                      artifacts/tooka_*_aarch64.dmg
+                      artifacts/tooka_*_x64.dmg
+                      artifacts/tooka_*_amd64.deb
+                      artifacts/tooka_*_x86_64.AppImage
+                      artifacts/tooka_*_x64_en-US.msi
+                      artifacts/tooka_*_x64-setup.exe
+                      artifacts/tooka_*_arm64.deb
+                      artifacts/tooka_*_riscv64.deb
