--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,13 +6,17 @@ edition = "2024"
 [dependencies]
 chrono = "0.4.41"
 clap = { version = "4", features = ["derive"] }
+clap_complete = "4.5.50"
 directories-next = "2.0.0"
+flate2 = "1.1.1"
+glob = "0.3.2"
 kamadak-exif = "0.6.1"
 log = "0.4.27"
 mime_guess = "2.0.5"
 regex = "1.11.1"
 serde = {version = "1.0.219", features = ["derive"]}
 serde_yaml = "0.9.34"
+shellexpand = "3.1.1"
 simplelog = "0.12.2"
 users = "0.11.0"
 walkdir = "2.5.0"
