--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,10 +9,13 @@ clap = { version = "4", features = ["derive"] }
 clap_complete = "4.5.50"
 directories-next = "2.0.0"
 flate2 = "1.1.1"
+flexi_logger = "0.30.1"
 glob = "0.3.2"
 kamadak-exif = "0.6.1"
 log = "0.4.27"
 mime_guess = "2.0.5"
+once_cell = "1.21.3"
+rayon = "1.10.0"
 regex = "1.11.1"
 serde = {version = "1.0.219", features = ["derive"]}
 serde_yaml = "0.9.34"
