--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,7 +43,7 @@ product-name = "tooka"
 identifier = "io.github.benji377.tooka"
 category = "Utility"
 #homepage = "https://tooka.deno.dev"
-icons = ["assets/logo.svg"]
+icons = ["assets/logo.png"]
 licenseFile = "LICENSE"
 formats = ["all"]
 before-packaging-command = "cargo build --release"
