--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,9 +43,7 @@ jobs:
               with:
                   name: ${{ matrix.platform }}-release-artifacts
                   path: |
-                      ${{ matrix.platform == 'macos-latest' && 'target/release/tooka.app' || '' }}
                       ${{ matrix.platform == 'macos-latest' && 'target/release/tooka_*_aarch64.dmg' || '' }}
-                      ${{ matrix.platform == 'macos-13' && 'target/release/tooka.app' || '' }}
                       ${{ matrix.platform == 'macos-13' && 'target/release/tooka_*_x64.dmg' || '' }}
                       ${{ matrix.platform == 'ubuntu-latest' && 'target/release/PKGBUILD' || '' }}
                       ${{ matrix.platform == 'ubuntu-latest' && 'target/release/tooka_*_amd64.deb' || '' }}
@@ -163,3 +161,4 @@ jobs:
                       artifacts/tooka_*_x64-setup.exe
                       artifacts/tooka_*_arm64.deb
                       artifacts/tooka_*_riscv64.deb
+                      artifacts/tooka_*_armhf.deb
