--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ flate2 = "1.1.1"
 flexi_logger = "0.30.1"
 glob = "0.3.2"
 kamadak-exif = "0.6.1"
+lazy_static = "1.5.0"
 log = "0.4.27"
 mime_guess = "2.0.5"
 once_cell = "1.21.3"
