--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ license-file = "LICENSE"
 readme = "README.md"
 repository = "https://github.com/Benji377/tooka"
 # homepage = "https://tooka.deno.dev"
+keywords = ["tooka", "filesystem", "cli", "utility", "automation"]
+categories = ["command-line-utilities", "filesystem", "utilities", "productivity"]
 default-run = "tooka"
 edition = "2024"
 rust-version = "1.87"
