--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,7 +47,7 @@ strip = true
 product-name = "tooka"
 identifier = "io.github.benji377.tooka"
 category = "Utility"
-#homepage = "https://tooka.deno.dev"
+homepage = "https://tooka.deno.dev"
 icons = ["assets/logo.png"]
 licenseFile = "LICENSE"
 formats = ["all"]
