--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ directories-next = "2.0.0"
 flate2 = "1.1.1"
 flexi_logger = "0.30.1"
 glob = "0.3.2"
+indicatif = "0.17.11"
 kamadak-exif = "0.6.1"
 lazy_static = "1.5.0"
 log = "0.4.27"
