--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,9 +18,11 @@ anyhow = "1.0.98"
 chrono = "0.4.41"
 clap = { version = "4", features = ["derive"] }
 clap_complete = "4.5.50"
+csv = "1.3.1"
 directories-next = "2.0.0"
 flate2 = "1.1.1"
 flexi_logger = "0.30.1"
+genpdf = { version = "0.2.0", features = ["images"] }
 glob = "0.3.2"
 indicatif = "0.17.11"
 kamadak-exif = "0.6.1"
@@ -30,6 +32,7 @@ mime_guess = "2.0.5"
 rayon = "1.10.0"
 regex = "1.11.1"
 serde = {version = "1.0.219", features = ["derive"]}
+serde_json = "1.0.140"
 serde_yaml = "0.9.34"
 shellexpand = "3.1.1"
 simplelog = "0.12.2"
