--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,10 +44,11 @@ users = "0.11.0"
 
 
 [profile.release]
-opt-level = 3
-lto = false
+opt-level = "s"
+lto = true
 codegen-units = 1
 strip = true
+panic = "abort"
 
 [package.metadata.packager]
 product-name = "tooka"
