--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,6 @@ clap = { version = "4", features = ["derive"] }
 clap_complete = "4.5.50"
 csv = "1.3.1"
 directories-next = "2.0.0"
-flate2 = "1.1.1"
 flexi_logger = "0.30.1"
 genpdf = { version = "0.2.0", features = ["images"] }
 glob = "0.3.2"
@@ -37,10 +36,8 @@ serde_yaml = "0.9.34"
 shellexpand = "3.1.1"
 simplelog = "0.12.2"
 thiserror = "2.0.12"
+trash = "5.2.2"
 walkdir = "2.5.0"
-
-[target.'cfg(unix)'.dependencies]
-users = "0.11.0"
 
 
 [profile.release]
