--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,13 +21,13 @@ clap_complete = "4.5.50"
 csv = "1.3.1"
 directories-next = "2.0.0"
 flexi_logger = "0.30.1"
-genpdf = { version = "0.2.0", features = ["images"] }
 glob = "0.3.2"
 indicatif = "0.17.11"
 kamadak-exif = "0.6.1"
 lazy_static = "1.5.0"
 log = "0.4.27"
 mime_guess = "2.0.5"
+printpdf = "0.8.2"
 rayon = "1.10.0"
 regex = "1.11.1"
 serde = {version = "1.0.219", features = ["derive"]}
