--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,30 +14,32 @@ edition = "2024"
 rust-version = "1.87"
 
 [dependencies]
-anyhow = "1.0.98"
-chrono = "0.4.41"
+# CLI and core functionality
 clap = { version = "4", features = ["derive"] }
 clap_complete = "4.5.50"
-csv = "1.3.1"
-directories-next = "2.0.0"
-flexi_logger = "0.30.1"
-glob = "0.3.2"
-indicatif = "0.17.11"
-kamadak-exif = "0.6.1"
-lazy_static = "1.5.0"
-log = "0.4.27"
-mime_guess = "2.0.5"
-printpdf = "0.8.2"
-rayon = "1.10.0"
-regex = "1.11.1"
-serde = {version = "1.0.219", features = ["derive"]}
-serde_json = "1.0.140"
-serde_yaml = "0.9.34"
-shellexpand = "3.1.1"
-simplelog = "0.12.2"
-thiserror = "2.0.12"
 trash = "5.2.2"
 walkdir = "2.5.0"
+rayon = "1.10.0"
+indicatif = "0.17.11"
+serde = {version = "1.0.219", features = ["derive"]}
+serde_yaml = "0.9.34"
+# Config, Logging and Error handling
+anyhow = "1.0.98"
+directories-next = "2.0.0"
+flexi_logger = "0.30.1"
+log = "0.4.27"
+thiserror = "2.0.12"
+lazy_static = "1.5.0"
+# File operations and metadata extraction
+regex = "1.11.1"
+glob = "0.3.2"
+mime_guess = "2.0.5"
+kamadak-exif = "0.6.1"
+chrono = "0.4.41"
+# Output generation
+printpdf = "0.8.2"
+serde_json = "1.0.140"
+csv = "1.3.1"
 
 
 [profile.release]
