--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,12 @@
-[package]
-name = "tooka"
+[workspace]
+resolver = "3"
+members = [
+    "tooka-core",
+    "tooka-cli"
+]
+default-members = ["tooka-cli"]
+
+[workspace.package]
 version = "0.1.4"
 description = "A fast, rule-based CLI tool for organizing your files"
 authors = ["Benjamin Demetz"]
@@ -9,38 +16,12 @@ repository = "https://github.com/Benji377/tooka"
 homepage = "https://tooka.deno.dev"
 keywords = ["tooka", "filesystem", "cli", "utility", "automation"]
 categories = ["command-line-utilities", "filesystem", "utilities", "productivity"]
-default-run = "tooka"
 edition = "2024"
 rust-version = "1.87"
 
-[dependencies]
-# CLI and core functionality
-clap = { version = "4", features = ["derive"] }
-clap_complete = "4.5.50"
-trash = "5.2.2"
-walkdir = "2.5.0"
-rayon = "1.10.0"
-indicatif = "0.17.11"
-serde = {version = "1.0.219", features = ["derive"]}
-serde_yaml = "0.9.34"
-# Config, Logging and Error handling
+[workspace.dependencies]
 anyhow = "1.0.98"
-directories-next = "2.0.0"
-flexi_logger = "0.30.1"
 log = "0.4.27"
-thiserror = "2.0.12"
-lazy_static = "1.5.0"
-# File operations and metadata extraction
-regex = "1.11.1"
-glob = "0.3.2"
-mime_guess = "2.0.5"
-kamadak-exif = "0.6.1"
-chrono = "0.4.41"
-# Output generation
-printpdf = "0.8.2"
-serde_json = "1.0.140"
-csv = "1.3.1"
-
 
 [profile.release]
 opt-level = "s"
@@ -48,13 +29,3 @@ lto = true
 codegen-units = 1
 strip = true
 panic = "abort"
-
-[package.metadata.packager]
-product-name = "tooka"
-identifier = "io.github.benji377.tooka"
-category = "Utility"
-homepage = "https://tooka.deno.dev"
-icons = ["assets/logo.png"]
-licenseFile = "LICENSE"
-formats = ["all"]
-before-packaging-command = "cargo build --release"
