--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -33,6 +33,7 @@ jobs:
       - name: Run rust-clippy
         run:
           cargo clippy
+          --workspace
           --all-features
           --message-format=json | clippy-sarif | tee rust-clippy-results.sarif | sarif-fmt
         continue-on-error: true
