--- a/tooka-cli/Cargo.toml
+++ b/tooka-cli/Cargo.toml
@@ -9,8 +9,8 @@ description.workspace = true
 authors.workspace = true
 keywords.workspace = true
 categories.workspace = true
-readme = "../README.md"
-license-file = "../LICENSE"
+readme.workspace = true
+license-file.workspace = true
 default-run = "tooka-cli"
 
 [dependencies]
