--- a/tooka-core/Cargo.toml
+++ b/tooka-core/Cargo.toml
@@ -9,7 +9,7 @@ repository.workspace = true
 homepage.workspace = true
 keywords.workspace = true
 categories.workspace = true
-readme.workspace = true
+readme = "README.md"
 license-file = "../LICENSE"
 
 [dependencies]
