--- a/tooka-core/Cargo.toml
+++ b/tooka-core/Cargo.toml
@@ -36,3 +36,11 @@ chrono = "0.4.41"
 printpdf = "0.8.2"
 serde_json = "1.0.140"
 csv = "1.3.1"
+
+[dev-dependencies]
+criterion = { version = "0.6", features = ["html_reports"] }
+tempfile = "3.20.0"
+
+[[bench]]
+name = "sorter_bench"
+harness = false
