--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,5 +26,22 @@ jobs:
     - name: Pre-Check the code
       run: cargo check --verbose
 
-    - name: Build test the app
-      run: cargo test -p tooka-core --verbose -- --show-output
+    - name: Install cargo2junit
+      run: cargo install cargo2junit
+
+    - name: Run tests and convert to JUnit
+      run: cargo2junit --output test-results.xml -- cargo test -p tooka-core -- --show-output
+
+    - name: Upload test results
+      uses: actions/upload-artifact@v4
+      with:
+        name: junit-test-results
+        path: test-results.xml
+
+    - name: Publish test results to GitHub UI
+      uses: dorny/test-reporter@v1
+      if: always()
+      with:
+        name: Rust Tests
+        path: test-results.xml
+        reporter: java-junit
