--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,11 +10,10 @@ on:
 env:
   CARGO_TERM_COLOR: always
   RUST_BACKTRACE: 1
-  RUSTC_BOOTSTRAP: 1
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
     - uses: actions/checkout@v4
     
@@ -27,24 +26,5 @@ jobs:
     - name: Pre-Check the code
       run: cargo check --verbose
 
-    - name: Install cargo2junit
-      run: cargo install cargo2junit
-
-    - name: Run tests and convert to JUnit
-      run: cargo test -p tooka-core -- --format json | cargo2junit > test-results.xml
-
-    - name: Upload test results
-      uses: actions/upload-artifact@v4
-      if: ${{ !cancelled() }}   
-      with:
-        name: test-results
-        path: test-results.xml
-
-    - name: Publish test results to GitHub UI
-      uses: dorny/test-reporter@v2
-      if: always()
-      with:
-        artifact: test-results
-        name: Rust Tests
-        path: '*.xml'
-        reporter: java-junit
+    - name: Test the app
+      run: cargo test -p tooka-core --verbose -- --show-output
