--- a/tooka-cli/Cargo.toml
+++ b/tooka-cli/Cargo.toml
@@ -26,8 +26,8 @@ product-name = "tooka"
 identifier = "io.github.benji377.tooka"
 category = "Utility"
 homepage = "https://tooka.deno.dev"
-icons = ["assets/logo.png"]
-licenseFile = "LICENSE"
+icons = ["../assets/logo.png"]
+licenseFile = "../LICENSE"
 formats = ["all"]
 before-packaging-command = "cargo build --release"
 
