--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,13 +43,13 @@ jobs:
               with:
                   name: ${{ matrix.platform }}-release-artifacts
                   path: |
-                      ${{ matrix.platform == 'macos-latest' && 'target/release/tooka_*_aarch64.dmg' || '' }}
-                      ${{ matrix.platform == 'macos-13' && 'target/release/tooka_*_x64.dmg' || '' }}
+                      ${{ matrix.platform == 'macos-latest' && 'target/release/tooka-cli_*_aarch64.dmg' || '' }}
+                      ${{ matrix.platform == 'macos-13' && 'target/release/tooka-cli_*_x64.dmg' || '' }}
                       ${{ matrix.platform == 'ubuntu-latest' && 'target/release/PKGBUILD' || '' }}
-                      ${{ matrix.platform == 'ubuntu-latest' && 'target/release/tooka_*_amd64.deb' || '' }}
-                      ${{ matrix.platform == 'ubuntu-latest' && 'target/release/tooka_*_x86_64.AppImage' || '' }}
-                      ${{ matrix.platform == 'windows-latest' && 'target/release/tooka_*_x64_en-US.msi' || '' }}
-                      ${{ matrix.platform == 'windows-latest' && 'target/release/tooka_*_x64-setup.exe' || '' }}
+                      ${{ matrix.platform == 'ubuntu-latest' && 'target/release/tooka-cli_*_amd64.deb' || '' }}
+                      ${{ matrix.platform == 'ubuntu-latest' && 'target/release/tooka-cli_*_x86_64.AppImage' || '' }}
+                      ${{ matrix.platform == 'windows-latest' && 'target/release/tooka-cli_*_x64_en-US.msi' || '' }}
+                      ${{ matrix.platform == 'windows-latest' && 'target/release/tooka-cli_*_x64-setup.exe' || '' }}
 
     # Cross-compilation job
     cross_compile:
@@ -135,15 +135,15 @@ jobs:
               uses: actions/attest-build-provenance@v2
               with:
                   subject-path: |
-                      artifacts/tooka_*_aarch64.dmg
-                      artifacts/tooka_*_x64.dmg
-                      artifacts/tooka_*_amd64.deb
-                      artifacts/tooka_*_x86_64.AppImage
-                      artifacts/tooka_*_x64_en-US.msi
-                      artifacts/tooka_*_x64-setup.exe
-                      artifacts/tooka_*_arm64.deb
-                      artifacts/tooka_*_riscv64.deb
-                      artifacts/tooka_*_armhf.deb
+                      artifacts/tooka-cli_*_aarch64.dmg
+                      artifacts/tooka-cli_*_x64.dmg
+                      artifacts/tooka-cli_*_amd64.deb
+                      artifacts/tooka-cli_*_x86_64.AppImage
+                      artifacts/tooka-cli_*_x64_en-US.msi
+                      artifacts/tooka-cli_*_x64-setup.exe
+                      artifacts/tooka-cli_*_arm64.deb
+                      artifacts/tooka-cli_*_riscv64.deb
+                      artifacts/tooka-cli_*_armhf.deb
 
             - name: Release to GitHub
               uses: softprops/action-gh-release@v2
@@ -152,12 +152,12 @@ jobs:
                   generate_release_notes: true
                   tag_name: Tooka v${{ env.VERSION }}
                   files: |
-                      artifacts/tooka_*_aarch64.dmg
-                      artifacts/tooka_*_x64.dmg
-                      artifacts/tooka_*_amd64.deb
-                      artifacts/tooka_*_x86_64.AppImage
-                      artifacts/tooka_*_x64_en-US.msi
-                      artifacts/tooka_*_x64-setup.exe
-                      artifacts/tooka_*_arm64.deb
-                      artifacts/tooka_*_riscv64.deb
-                      artifacts/tooka_*_armhf.deb
+                      artifacts/tooka-cli_*_aarch64.dmg
+                      artifacts/tooka-cli_*_x64.dmg
+                      artifacts/tooka-cli_*_amd64.deb
+                      artifacts/tooka-cli_*_x86_64.AppImage
+                      artifacts/tooka-cli_*_x64_en-US.msi
+                      artifacts/tooka-cli_*_x64-setup.exe
+                      artifacts/tooka-cli_*_arm64.deb
+                      artifacts/tooka-cli_*_riscv64.deb
+                      artifacts/tooka-cli_*_armhf.deb
