--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -111,7 +111,7 @@ jobs:
               env:
                   PKG_CONFIG_SYSROOT_DIR: ${{ matrix.sysroot }}
               run: |
-                  cargo deb --target=${{ matrix.target }} -- --no-default-features
+                  cargo deb -p tooka-cli --target=${{ matrix.target }}
 
             - name: Upload cross-compile artifacts
               uses: actions/upload-artifact@v4
