--- a/tooka-cli/Cargo.toml
+++ b/tooka-cli/Cargo.toml
@@ -11,11 +11,7 @@ keywords.workspace = true
 categories.workspace = true
 readme.workspace = true
 license-file.workspace = true
-default-run = "tooka"
-
-[[bin]]
-name = "tooka"
-path = "src/main.rs"
+default-run = "tooka-cli"
 
 [dependencies]
 tooka-core = { path = "../tooka-core" }
@@ -33,4 +29,4 @@ homepage = "https://tooka.deno.dev"
 icons = ["../assets/logo.png"]
 licenseFile = "../LICENSE"
 formats = ["all"]
-before-packaging-command = "cargo build --release -p tooka-cli"
+before-packaging-command = "cargo build --release"
