--- a/tooka-cli/Cargo.toml
+++ b/tooka-cli/Cargo.toml
@@ -39,16 +39,16 @@ before-packaging-command = "cargo build --release -p tooka-cli"
 generate-desktop-entry = false
 
 [package.metadata.packager.appimage.files]
-"../data/io.github.benji377.tooka.desktop" = "usr/share/applications/io.github.benji377.tooka.desktop"
-"../data/io.github.benji377.tooka.svg" = "usr/share/icons/hicolor/scalable/apps/io.github.benji377.tooka.svg"
-"../data/io.github.benji377.tooka.metainfo.xml" = "usr/share/metainfo/io.github.benji377.tooka.metainfo.xml"
+"../data/tooka.desktop" = "usr/share/applications/tooka.desktop"
+"../data/tooka.svg" = "usr/share/icons/hicolor/scalable/apps/tooka.svg"
+"../data/tooka.metainfo.xml" = "usr/share/metainfo/tooka.metainfo.xml"
 
 [package.metadata.packager.deb.files]
-"../data/io.github.benji377.tooka.desktop" = "usr/share/applications/io.github.benji377.tooka.desktop"
-"../data/io.github.benji377.tooka.svg" = "usr/share/icons/hicolor/scalable/apps/io.github.benji377.tooka.svg"
-"../data/io.github.benji377.tooka.metainfo.xml" = "usr/share/metainfo/io.github.benji377.tooka.metainfo.xml"
+"../data/tooka.desktop" = "usr/share/applications/tooka.desktop"
+"../data/tooka.svg" = "usr/share/icons/hicolor/scalable/apps/tooka.svg"
+"../data/tooka.metainfo.xml" = "usr/share/metainfo/tooka.metainfo.xml"
 
 [package.metadata.packager.pacman.files]
-"../data/io.github.benji377.tooka.desktop" = "usr/share/applications/io.github.benji377.tooka.desktop"
-"../data/io.github.benji377.tooka.svg" = "usr/share/icons/hicolor/scalable/apps/io.github.benji377.tooka.svg"
-"../data/io.github.benji377.tooka.metainfo.xml" = "usr/share/metainfo/io.github.benji377.tooka.metainfo.xml"
+"../data/tooka.desktop" = "usr/share/applications/tooka.desktop"
+"../data/tooka.svg" = "usr/share/icons/hicolor/scalable/apps/tooka.svg"
+"../data/tooka.metainfo.xml" = "usr/share/metainfo/tooka.metainfo.xml"
