--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
 
 env:
-  VERSION: 1.0.0
+  VERSION: 1.0.1
 
 jobs:
   build:
@@ -70,11 +70,11 @@ jobs:
             apt: gcc-aarch64-linux-gnu
             sysroot: /usr/aarch64-linux-gnu/
             pkg_arch: arm64
-          - arch: riscv64
-            target: riscv64gc-unknown-linux-gnu
-            apt: gcc-riscv64-linux-gnu
-            sysroot: /usr/riscv64-linux-gnu/
-            pkg_arch: riscv64
+#          - arch: riscv64                         Not supported by cargo-packager yet
+#            target: riscv64gc-unknown-linux-gnu
+#            apt: gcc-riscv64-linux-gnu
+#            sysroot: /usr/riscv64-linux-gnu/
+#            pkg_arch: riscv64
           - arch: armv7
             target: armv7-unknown-linux-gnueabihf
             apt: gcc-arm-linux-gnueabihf
