--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -130,7 +130,7 @@ jobs:
       - name: Create attestation for all builds
         uses: actions/attest-build-provenance@v2
         with:
-          subject-path: artifacts/*
+          subject-path: artifacts/tooka*
 
       - name: Release to GitHub
         uses: softprops/action-gh-release@v2
@@ -138,4 +138,4 @@ jobs:
           draft: true
           generate_release_notes: true
           tag_name: Tooka v${{ env.VERSION }}
-          files: artifacts/*
+          files: artifacts/tooka*
