--- a/tooka-core/Cargo.toml
+++ b/tooka-core/Cargo.toml
@@ -33,9 +33,9 @@ mime_guess = "2.0.5"
 kamadak-exif = "0.6.1"
 chrono = "0.4.41"
 # Output generation
-printpdf = "0.8.2"
 serde_json = "1.0.140"
 csv = "1.3.1"
+pdf-writer = "0.13.0"
 
 [dev-dependencies]
 criterion = { version = "0.6", features = ["html_reports"] }
