--- a/.github/workflows/winget.yaml
+++ b/.github/workflows/winget.yaml
@@ -2,6 +2,11 @@ name: Winget
 on:
   release:
     types: [published]
+  workflow_dispatch:
+    inputs:
+      tag:
+        description: "Tag of the release (e.g. v1.0.0)"
+        required: false
 
 jobs:
   publish:
@@ -17,4 +22,6 @@ jobs:
       uses: actions/checkout@v4
     - name: Create manifest and submit PR
       run: |
-        ./build.ps1 -Version "${{ github.event.release.tag_name }}" -Token $env:WINGETCREATE_TOKEN
+        $version = "${{ github.event.release.tag_name || inputs.tag }}"
+        ./build.ps1 -Version $version -Token $env:WINGETCREATE_TOKEN
+
